[package]
name    = "katvisualizer"
version = "0.12.1"
edition = "2024"

[workspace]
members = [
	"xtask",
]

[lib]
crate-type = [
	"cdylib",
	"lib",
]

[features]
default = [ "midi" ]
force-mono = [  ]
force-stereo = [  ]
force-mono-to-stereo = [
]
mute-output = [  ]
midi = [  ]

[dependencies]
nih_plug = { git = "https://github.com/transkatgirl/nih-plug.git", rev = "1f132feff0b03df8b5078ffaa1087201c9545d3f", features = [
	"assert_process_allocs",
	"standalone",
] }
nih_plug_egui = { git = "https://github.com/transkatgirl/nih-plug.git", rev = "1f132feff0b03df8b5078ffaa1087201c9545d3f" }
serde = { version = "1.0", features = [
	"derive",
] }
color = "0.3.2"
threadpool = "1.8.1"
parking_lot = "0.12.5"
mimalloc = { version = "0.1.48", features = [
	"v3",
] }
voracious_radix_sort = "1.2.0"
rosc = "0.11.4"

[profile.dev]
opt-level = 3

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
