[package]
name    = "katvisualizer"
version = "0.14.1"
edition = "2024"

[workspace]
members = [
	"xtask",
]

[lib]
crate-type = [
	"cdylib",
	"lib",
]

[features]
default = [ "midi" ]
force-mono = [  ]
force-stereo = [  ]
force-mono-to-stereo = [
]
mute-output = [  ]
midi = [  ]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = [
	"assert_process_allocs",
	"standalone",
] }
nih_plug_egui = { git = "https://github.com/transkatgirl/egui-baseview.git", rev = "c45c3a5f71f0f377ea95df9cdfe1ae8a51e0d42b" }
#nih_plug_egui = { git = "https://github.com/BillyDM/egui-baseview.git", rev = "e8a43d4c4029f9380206a52777d10c0ddbbb1d66" }
serde = { version = "1.0", features = [
	"derive",
] }
color = "0.3.2"
threadpool = "1.8.1"
parking_lot = "0.12.5"
mimalloc = { version = "0.1.48", features = [
	"v3",
] }
voracious_radix_sort = "1.2.0"
rosc = "0.11.4"
realfft = { version = "3.5.0", features = [
	"avx",
	"neon",
	"sse",
	"wasm_simd",
] }
keepawake = "0.6.0"

[profile.dev]
opt-level = 3

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
