[package]
name    = "katvisualizer"
version = "0.15.5"
edition = "2024"

[workspace]
members = [
	"xtask",
]

[lib]
crate-type = [
	"cdylib",
	"lib",
]

[[bin]]
name = "katvisualizer_wasm"

[features]
force-mono = [  ]
force-stereo = [  ]
force-mono-to-stereo = [
]
mute-output = [  ]

[dependencies]
color       = "0.3.2"
parking_lot = "0.12.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95", features = [
	"assert_process_allocs",
	"standalone",
] }
nih_plug_egui = { git = "https://github.com/transkatgirl/egui-baseview.git", rev = "6f70371ed58de27ccb328710a2c1c43ce12ea450", features = [
	"keyboard_focus_workaround",
] }
threadpool = "1.8.1"
keepawake = "0.6.0"
mimalloc = { version = "0.1.48", features = [
	"v3",
] }

#nih_plug_egui = { git = "https://github.com/BillyDM/egui-baseview.git", rev = "e8a43d4c4029f9380206a52777d10c0ddbbb1d66" }
[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = [
	"default_fonts",
	"glow",
] }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.85"
web-sys = "0.3.70"
web-time = "1.1.0"

[profile.dev]
opt-level = 3

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
